# vidthumb

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  flake.nix  guix.scm  vidthumb.py  vidthumbzip.py
doc/: Makefile  vidthumb.1  vidthumb.ent  vidthumb.xml
src/: directory_thumbnailer.cpp  directory_thumbnailer.hpp  fourd_thumbnailer.cpp  fourd_thumbnailer.hpp  grid_thumbnailer.cpp  grid_thumbnailer.hpp  media_info.cpp  media_info.hpp  param_list.cpp  param_list.hpp  thumbnailer.hpp  video_processor.cpp  video_processor.hpp  vidthumb.cpp
tests/: gtest_test.cpp
